k8s/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-dep
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-dep
spec:
  replicas: 3
