k8s/overlays/prod/bank-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-bank
spec:
  to:
    kind: Service
    name: service-bank
  port:
    targetPort: 8080
